--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@maticoapp/deck.gl-pmtiles": "0.0.14",
+    "@maticoapp/deck.gl-pmtiles": "^0.0.31",
     "@types/d3": "^7.4.0",
     "d3": "^7.6.1",
-    "deck.gl": "^8.8.9",
-    "mapbox-gl": "^2.10.0",
-    "pmtiles": "^1.1.0",
+    "deck.gl": "8.8.9",
+    "mapbox-gl": "2.10.0",
+    "maplibre-gl": "^2.4.0",
+    "pmtiles": "^2.7.0",
     "react": "^18.2.0",
     "react-countup": "^6.3.1",
     "react-dom": "^18.2.0",
-    "react-map-gl": "^7.0.19",
+    "react-map-gl": "7.0.19",
     "vite-plugin-comlink": "^3.0.4"
   },
   "devDependencies": {
