--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
+    "raw-build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -19,7 +20,8 @@
     "react-countup": "^6.3.1",
     "react-dom": "^18.2.0",
     "react-map-gl": "7.0.19",
-    "vite-plugin-comlink": "^3.0.4"
+    "vite-plugin-comlink": "^3.0.4",
+    "zustand": "^4.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
