--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,15 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "skipDefaultLibCheck": true
   },
   "include": ["src"],
+  "exclude": [
+    "node_modules",
+    "./node_modules",
+    "./node_modules/*",
+    "./node_modules/@deck.gl/*"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
