--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-countup": "^6.3.1",
     "react-dom": "^18.2.0",
     "react-map-gl": "7.0.19",
+    "react-tooltip": "^5.8.3",
     "vite-plugin-comlink": "^3.0.4",
     "zustand": "^4.3.3"
   },
