--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@maticoapp/deck.gl-pmtiles": "^0.0.31",
     "@types/d3": "^7.4.0",
     "d3": "^7.6.1",
+    "d3-scale": "^4.0.2",
     "deck.gl": "8.8.9",
     "mapbox-gl": "2.10.0",
     "maplibre-gl": "^2.4.0",
