--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
-  "name": "pmtiles-viewer",
-  "version": "0.0.0",
-  "type": "module",
+  "name": "mn-explorer",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "raw-build": "vite build",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
+    "@types/node": "18.14.2",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "eslint": "8.35.0",
+    "eslint-config-next": "13.2.1",
+    "next": "13.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "4.9.5",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@maticoapp/deck.gl-pmtiles": "^0.0.31",
     "@types/d3": "^7.4.0",
@@ -18,25 +27,9 @@
     "mapbox-gl": "2.10.0",
     "maplibre-gl": "^2.4.0",
     "pmtiles": "^2.7.0",
-    "react": "^18.2.0",
-    "react-countup": "^6.3.1",
-    "react-dom": "^18.2.0",
     "react-map-gl": "7.0.19",
     "react-tooltip": "^5.8.3",
     "vite-plugin-comlink": "^3.0.4",
     "zustand": "^4.3.3"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.1.0",
-    "geojson": "^0.5.0",
-    "ol": "^7.1.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.1.0"
-  },
-  "engines": {
-    "npm": ">=8.0.0",
-    "node": ">=16.0.0"
   }
 }
