--- a/package.json
+++ b/package.json
@@ -5,31 +5,38 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.14.2",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "eslint": "8.35.0",
-    "eslint-config-next": "13.2.1",
-    "next": "13.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.5",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@maticoapp/deck.gl-pmtiles": "^0.0.31",
     "@types/d3": "^7.4.0",
+    "@types/node": "18.14.2",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
     "d3": "^7.6.1",
     "d3-scale": "^4.0.2",
+    "daisyui": "^2.51.2",
     "deck.gl": "8.8.9",
+    "eslint": "8.35.0",
+    "eslint-config-next": "13.2.1",
     "mapbox-gl": "2.10.0",
     "maplibre-gl": "^2.4.0",
+    "next": "13.2.1",
     "pmtiles": "^2.7.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-map-gl": "7.0.19",
     "react-tooltip": "^5.8.3",
+    "typescript": "4.9.5",
     "vite-plugin-comlink": "^3.0.4",
     "zustand": "^4.3.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
