--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@maticoapp/deck.gl-pmtiles": "^0.0.31",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/d3": "^7.4.0",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
