--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "tsc && next build",
     "export": "next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
-    "@maticoapp/deck.gl-pmtiles": "^0.0.31",
+    "@maticoapp/deck.gl-pmtiles": "^0.0.33",
     "@tailwindcss/typography": "^0.5.9",
     "@types/d3": "^7.4.0",
     "@types/node": "18.14.2",
